; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_menu_action_setting_disp_set_label_playlist_right_thumbnail_mode.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_get_value.c_menu_action_setting_disp_set_label_playlist_right_thumbnail_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PLAYLIST_THUMBNAIL_RIGHT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32, i8*, i8*, i64, i8*, i8*, i64)* @menu_action_setting_disp_set_label_playlist_right_thumbnail_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @menu_action_setting_disp_set_label_playlist_right_thumbnail_mode(i32* %0, i32* %1, i32 %2, i32 %3, i8* %4, i8* %5, i64 %6, i8* %7, i8* %8, i64 %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i8*, align 8
  %20 = alloca i64, align 8
  %21 = alloca i32*, align 8
  store i32* %0, i32** %11, align 8
  store i32* %1, i32** %12, align 8
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i8* %4, i8** %15, align 8
  store i8* %5, i8** %16, align 8
  store i64 %6, i64* %17, align 8
  store i8* %7, i8** %18, align 8
  store i8* %8, i8** %19, align 8
  store i64 %9, i64* %20, align 8
  %22 = call i32* (...) @playlist_get_cached()
  store i32* %22, i32** %21, align 8
  %23 = load i8*, i8** %16, align 8
  store i8 0, i8* %23, align 1
  %24 = load i32*, i32** %12, align 8
  store i32 19, i32* %24, align 4
  %25 = load i8*, i8** %19, align 8
  %26 = load i8*, i8** %18, align 8
  %27 = load i64, i64* %20, align 8
  %28 = call i32 @strlcpy(i8* %25, i8* %26, i64 %27)
  %29 = load i32*, i32** %21, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %32, label %31

31:                                               ; preds = %10
  br label %39

32:                                               ; preds = %10
  %33 = load i8*, i8** %16, align 8
  %34 = load i32*, i32** %21, align 8
  %35 = load i32, i32* @PLAYLIST_THUMBNAIL_RIGHT, align 4
  %36 = call i8* @get_playlist_thumbnail_mode_value(i32* %34, i32 %35)
  %37 = load i64, i64* %17, align 8
  %38 = call i32 @strlcpy(i8* %33, i8* %36, i64 %37)
  br label %39

39:                                               ; preds = %32, %31
  ret void
}

declare dso_local i32* @playlist_get_cached(...) #1

declare dso_local i32 @strlcpy(i8*, i8*, i64) #1

declare dso_local i8* @get_playlist_thumbnail_mode_value(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
